fix tabs overflow on mobile, adds new scrollbar hidden utility

--- a/core/app/globals.css
+++ b/core/app/globals.css
@@ -109,3 +109,14 @@
     will-change: clip-path;
   }
 }
+
+@layer utilities {
+  .scrollbar-hidden {
+    scrollbar-width: none;
+    -webkit-scrollbar-width: none;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
+  }
+}
